--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1114,7 +1114,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s9kJHyTfIA {
-  background-image: url("../../../assets/images/background30.jpg");
+  background-image: url("../../../assets/images/background31.jpg");
 }
 .cid-s9kJHyTfIA h1 {
   color: #616161;
@@ -1128,22 +1128,8 @@ section.lazy-placeholder:after {
   font-style: italic;
 }
 .cid-s9kJHyTfIA H3 {
-  text-align: center;
+  text-align: left;
   color: #ff3366;
-}
-.cid-s9kJHZo1qk {
-  background-image: url("../../../assets/images/background30.jpg");
-}
-.cid-s9kJHZo1qk h1 {
-  color: #616161;
-}
-.cid-s9kJHZo1qk h2,
-.cid-s9kJHZo1qk h3,
-.cid-s9kJHZo1qk p {
-  color: #767676;
-}
-.cid-s9kJHZo1qk .mbr-section-subtitle {
-  font-style: italic;
 }
 .cid-s9kKVe6oGJ .navbar {
   padding: .5rem 0;
@@ -1546,7 +1532,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s9kVUxwpKf {
-  background-image: url("../../../assets/images/background30.jpg");
+  background-image: url("../../../assets/images/background31.jpg");
 }
 .cid-s9kVUxwpKf h1 {
   color: #616161;
