create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
 
 
@@ -711,7 +711,7 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-s9kJHyTfIA {
-  background-image: url("../../../assets/images/background39.jpg");
+  background-image: url("../../../assets/images/background30.jpg");
 }
 .cid-s9kJHyTfIA h1 {
   color: #616161;
@@ -1129,7 +1129,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s9kVUxwpKf {
-  background-image: url("../../../assets/images/background39.jpg");
+  background-image: url("../../../assets/images/background30.jpg");
 }
 .cid-s9kVUxwpKf h1 {
   color: #616161;
