create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,7 +711,7 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-s9kJHyTfIA {
-  background-image: url("../../../assets/images/background315.jpg");
+  background-image: url("../../../assets/images/mbr-1920x600.jpg");
 }
 .cid-s9kJHyTfIA h1 {
   color: #616161;
@@ -727,6 +727,13 @@ section.lazy-placeholder:after {
 .cid-s9kJHyTfIA H3 {
   text-align: left;
   color: #ff3366;
+}
+.cid-s9kJHyTfIA H1 {
+  color: #232323;
+}
+.cid-s9kJHyTfIA .mbr-text,
+.cid-s9kJHyTfIA .mbr-section-btn {
+  color: #232323;
 }
 .cid-s9kKVe6oGJ .navbar {
   padding: .5rem 0;
@@ -1224,7 +1231,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s9kVUxwpKf {
-  background-image: url("../../../assets/images/background315.jpg");
+  background-image: url("../../../assets/images/background317.jpg");
 }
 .cid-s9kVUxwpKf h1 {
   color: #616161;
@@ -3836,7 +3843,7 @@ section.lazy-placeholder:after {
 .cid-s9pFMG8WJf {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f9f9f9;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-s9pFMG8WJf .mbr-section-text {
   color: #767676;
